--- a/pom.xml
+++ b/pom.xml
@@ -31,4 +31,17 @@
             </plugin>
         </plugins>
     </build>
+
+	<reporting>
+  		<plugins>
+    		<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-report-plugin</artifactId>
+				<version>3.0.0-M1</version>
+				<configuration>
+			        <aggregate>true</aggregate>
+      			</configuration>
+    		</plugin>
+  		</plugins>
+	</reporting>
 </project>
